[package]
name = "tile-download-tool"
description = "A tool to download XYZ map tiles to a PMTiles archive"
repository = "https://github.com/KotobaMedia/tile-download-tool"
version = "0.1.0"
edition = "2024"
license = "MIT"
exclude = [
    ".github/*",
    "data/*",
]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
flume = "0.11"
indicatif = "0.18"
pmtiles = { version = "0.15", default-features = false, features = ["write"] }
regex = "1"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
