[package]
name = "tile-download-tool"
description = "A tool to download XYZ map tiles to a PMTiles archive"
repository = "https://github.com/KotobaMedia/tile-download-tool"
version = "0.2.1"
edition = "2024"
license = "MIT"
exclude = [
    ".github/*",
    "data/*",
]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
flume = "0.11"
futures-util = "0.3.31"
indicatif = "0.18"
pmtiles = { version = "0.16", default-features = false, features = ["write", "mmap-async-tokio", "iter-async"] }
regex = "1"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.21"
tokio = { version = "1", features = ["full"] }
url = "2"

[patch.crates-io]
pmtiles = { git = "https://github.com/keichan34/pmtiles-rs", branch = "writer-dedup" }
# pmtiles = { path = "../pmtiles-rs" }
